<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".ui.HasilPrediksiActivity">

    <ProgressBar
        android:id="@+id/progress_bar"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:visibility="visible"
        app:layout_anchorGravity="center_horizontal|center_vertical"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <TextView
        android:id="@+id/tv_hasil_prediksi"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="24dp"
        android:layout_marginTop="32dp"
        android:text="@string/hasil_prediksi"
        android:textColor="@color/black"
        android:textSize="24sp"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <TextView
        android:id="@+id/tv_harga_jual"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="24dp"
        android:text="@string/harga_jual_bawang_merah_bulan_depan"
        android:textColor="@color/black"
        app:layout_constraintStart_toStartOf="@+id/tv_hasil_prediksi"
        app:layout_constraintTop_toBottomOf="@+id/tv_hasil_prediksi" />

    <TextView
        android:id="@+id/tv_rupiah"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="24dp"
        android:text="@string/rp"
        android:textColor="@color/black"
        app:layout_constraintStart_toStartOf="@+id/tv_harga_jual"
        app:layout_constraintTop_toBottomOf="@+id/tv_harga_jual" />

    <TextView
        android:id="@+id/tv_result_price"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="4dp"
        android:layout_marginTop="24dp"
        android:text="@string/_10000"
        android:textStyle="bold"
        android:textColor="@color/black"
        app:layout_constraintStart_toEndOf="@+id/tv_rupiah"
        app:layout_constraintTop_toBottomOf="@+id/tv_harga_jual" />

    <TextView
        android:id="@+id/tv_kilogram"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="4dp"
        android:textColor="@color/black"
        android:text="@string/kg"
        app:layout_constraintStart_toEndOf="@+id/tv_result_price"
        app:layout_constraintTop_toTopOf="@+id/tv_result_price" />
</androidx.constraintlayout.widget.ConstraintLayout>