<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".MainActivity">

    <TextView
        android:id="@+id/tv_pilih_komoditas"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="24dp"
        android:text="@string/pilih_komoditas"
        android:textSize="16sp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <TextView
        android:id="@+id/tv_curah_hujan"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="32dp"
        android:text="@string/curah_hujan_mm"
        android:textSize="16sp"
        app:layout_constraintStart_toStartOf="@+id/tv_pilih_komoditas"
        app:layout_constraintTop_toBottomOf="@+id/tv_pilih_komoditas" />

    <TextView
        android:id="@+id/tv_produksi"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="32dp"
        android:text="@string/produksi_ton"
        android:textSize="16sp"
        app:layout_constraintStart_toStartOf="@+id/tv_curah_hujan"
        app:layout_constraintTop_toBottomOf="@+id/tv_curah_hujan" />

    <EditText
        android:id="@+id/et_curah_hujan"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="16dp"
        android:autofillHints="@string/masukkan_angka"
        android:ems="10"
        android:hint="@string/masukkan_angka"
        android:inputType="textPersonName"
        android:textSize="16sp"
        app:layout_constraintBottom_toBottomOf="@+id/tv_curah_hujan"
        app:layout_constraintStart_toEndOf="@+id/tv_curah_hujan"
        app:layout_constraintTop_toTopOf="@+id/tv_curah_hujan" />

    <EditText
        android:id="@+id/et_produksi"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:autofillHints="@string/masukkan_angka"
        android:ems="10"
        android:hint="@string/masukkan_angka"
        android:inputType="textPersonName"
        android:textSize="16sp"
        android:layout_marginStart="42dp"
        app:layout_constraintBottom_toBottomOf="@+id/tv_produksi"
        app:layout_constraintStart_toEndOf="@+id/tv_produksi"
        app:layout_constraintTop_toTopOf="@+id/tv_produksi" />

    <Spinner
        android:id="@+id/spinner"
        android:layout_width="190dp"
        android:layout_height="wrap_content"
        android:layout_marginStart="33dp"
        app:layout_constraintBottom_toBottomOf="@+id/tv_pilih_komoditas"
        app:layout_constraintStart_toEndOf="@+id/tv_pilih_komoditas"
        app:layout_constraintTop_toTopOf="@+id/tv_pilih_komoditas" />

    <Button
        android:id="@+id/btn_proccess"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/proses"
        android:backgroundTint="@android:color/white"
        android:textColor="@color/black"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/et_produksi" />

</androidx.constraintlayout.widget.ConstraintLayout>